--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,9 @@
 {
   "lerna": "2.11.0",
   "packages": [
-    "packages/*"
+    "packages/*",
+    "./"
   ],
+  "npmClient": "yarn",
   "version": "0.0.0"
 }
