--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
   ],
   "author": "Hydrogen",
   "license": "MIT",
-	"devDependencies": {
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build"
+  },
+  "dependencies": {
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "styled-components": "^3.3.3",
+    "ubb-core": "^1.0.0",
+    "ubb-react": "^1.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^16.4.7",
+    "@types/react-dom": "^16.0.6",
+    "docz": "latest",
     "lerna": "^2.11.0",
-    "typescript": "2.9.2"
-	}
+    "typescript": "^2.9.2"
+  }
 }
