--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cc98-ubb",
   "version": "0.1.0",
-  "description": "A UBB editor for CC98.",
+  "description": "Yet Another UBB for CC98.",
   "keywords": [
     "UBB",
     "CC98"
@@ -10,21 +10,12 @@
   "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "docz:dev": "docz dev",
-    "docz:build": "docz build"
-  },
-  "dependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "styled-components": "^3.3.3",
-    "ubb-core": "^1.0.0",
-    "ubb-react": "^1.0.0"
+    "clean": "lerna run clean && lerna clean",
+    "watch": "lerna run --parallel watch",
+    "docz:dev": "lerna run --parallel --scope ubb-site docz:dev",
+    "docz:build": "lerna run --parallel --scope ubb-site docz:build"
   },
   "devDependencies": {
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
-    "docz": "latest",
-    "lerna": "^2.11.0",
-    "typescript": "^2.9.2"
+    "lerna": "^2.11.0"
   }
 }
