--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -2,16 +2,18 @@
   "name": "ubb-react",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "scripts": {
+    "watch": "tsc -w",
+    "clean": "rm -rf dist"
+  },
   "dependencies": {
     "ubb-core": "^1.0.0"
   },
   "peerDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.4.1"
   },
   "devDependencies": {
     "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
     "typescript": "^2.9.2"
   }
 }
