--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -4,7 +4,8 @@
   "main": "dist/index.js",
   "scripts": {
     "watch": "tsc -w",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "mocha"
   },
   "dependencies": {
     "ubb-core": "^1.0.0"
@@ -13,7 +14,14 @@
     "react": "^16.4.1"
   },
   "devDependencies": {
+    "@types/expect": "^1.20.3",
+    "@types/mocha": "^5.2.5",
     "@types/react": "^16.4.7",
+    "expect": "^23.4.0",
+    "expect-jsx": "^5.0.0",
+    "jest": "^23.4.2",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.0",
     "typescript": "^2.9.2"
   }
 }
