--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
+    "tsc": "tsc",
     "watch": "tsc -w",
     "clean": "rm -rf dist"
   },
@@ -14,6 +15,6 @@
   },
   "devDependencies": {
     "@types/react": "^16.4.7",
-    "typescript": "^2.9.2"
+    "typescript": "^3.0.1"
   }
 }
