--- a/site/package.json
+++ b/site/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "docz": "latest",
-    "typescript": "^2.9.2"
+    "docz": "^0.10.0",
+    "typescript": "^3.0.1"
   }
 }
