--- a/site/package.json
+++ b/site/package.json
@@ -1,12 +1,17 @@
 {
   "name": "ubb-site",
   "version": "1.0.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Deturium/UBB"
+  },
   "scripts": {
     "docz:dev": "docz dev",
     "docz:build": "docz build",
     "clean": "rm -rf .docz"
   },
   "dependencies": {
+    "docz": "^0.10.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "styled-components": "^3.3.3",
@@ -16,7 +21,6 @@
   "devDependencies": {
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "docz": "0.7.0",
     "typescript": "^3.0.1"
   }
 }
