--- a/packages/ubb-core/package.json
+++ b/packages/ubb-core/package.json
@@ -5,9 +5,13 @@
   "scripts": {
     "tsc": "tsc",
     "watch": "tsc -w",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.1",
+    "jest": "^23.5.0",
+    "ts-jest": "^23.1.3",
     "typescript": "^3.0.1"
   }
 }
