--- a/site/package.json
+++ b/site/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ubb-site",
-  "version": "1.0.0",
+  "name": "@cc98/ubb-site",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/Deturium/UBB"
@@ -11,16 +11,16 @@
     "clean": "rm -rf .docz"
   },
   "dependencies": {
-    "docz": "^0.10.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "docz": "latest",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "styled-components": "^3.3.3",
     "ubb-core": "^1.0.0",
     "ubb-react": "^1.0.0"
   },
   "devDependencies": {
-    "@types/react": "^16.4.7",
-    "@types/react-dom": "^16.0.6",
+    "@types/react": "^16.4.11",
+    "@types/react-dom": "^16.0.7",
     "typescript": "^3.0.1"
   }
 }
