--- a/lerna.json
+++ b/lerna.json
@@ -5,5 +5,14 @@
     "site/"
   ],
   "npmClient": "yarn",
+  "command": {
+    "publish": {
+      "allowBranch": "master"
+    }
+  },
+  "ignoreChanges": [
+    "**/__tests__/**",
+    "**/*.md"
+  ],
   "version": "1.0.1"
 }
