--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -12,7 +12,7 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "ubb-core": "^1.0.0"
+    "@cc98/ubb-core": "^1.0.0"
   },
   "peerDependencies": {
     "react": "^16.4.2"
