--- a/site/package.json
+++ b/site/package.json
@@ -16,8 +16,8 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "styled-components": "^3.3.3",
-    "ubb-core": "^1.0.0",
-    "ubb-react": "^1.0.0"
+    "@cc98/ubb-core": "^1.0.0",
+    "@cc98/ubb-react": "^1.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.4.11",
