--- a/packages/ubb-core/package.json
+++ b/packages/ubb-core/package.json
@@ -7,7 +7,7 @@
   },
   "main": "dist/index.js",
   "scripts": {
-    "tsc": "tsc",
+    "tsc": "rm -rf dist && tsc",
     "watch": "tsc -w",
     "clean": "rm -rf dist coverage",
     "test": "jest"
