--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -7,7 +7,7 @@
     "access": "public"
   },
   "scripts": {
-    "tsc": "tsc",
+    "tsc": "rm -rf dist && tsc",
     "watch": "tsc -w",
     "clean": "rm -rf dist"
   },
