--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "clean": "lerna run clean && lerna clean",
-    "tsc": "lerna run --parallel tsc",
+    "tsc": "lerna run tsc",
     "watch": "lerna run --parallel watch",
     "test": "lerna run --parallel test",
     "docz:dev": "lerna run --parallel --scope @cc98/ubb-site docz:dev",
