--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -12,13 +12,15 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "@cc98/ubb-core": "^1.0.0"
+    "@cc98/ubb-core": "^1.0.0",
+    "url-parse": "^1.4.3"
   },
   "peerDependencies": {
     "react": "^16.4.2"
   },
   "devDependencies": {
     "@types/react": "^16.4.11",
+    "@types/url-parse": "^1.4.1",
     "typescript": "^3.0.1"
   }
 }
