--- a/packages/ubb-core/package.json
+++ b/packages/ubb-core/package.json
@@ -6,6 +6,7 @@
     "access": "public"
   },
   "main": "dist/index.js",
+  "sideEffects": false,
   "scripts": {
     "tsc": "rm -rf dist && tsc",
     "watch": "tsc -w",
