--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "description": "YAUC React version.",
   "main": "dist/index.js",
+  "sideEffects": false,
   "publishConfig": {
     "access": "public"
   },
