--- a/packages/ubb-core/package.json
+++ b/packages/ubb-core/package.json
@@ -8,15 +8,15 @@
   "main": "dist/index.js",
   "sideEffects": false,
   "scripts": {
-    "tsc": "rm -rf dist && tsc",
-    "watch": "tsc -w",
+    "build": "rm -rf dist && tsc",
+    "build:watch": "tsc -w",
     "clean": "rm -rf dist coverage",
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "jest": "^23.5.0",
-    "ts-jest": "^23.1.3",
-    "typescript": "^3.0.1"
+    "@types/jest": "^23.3.5",
+    "jest": "^23.6.0",
+    "ts-jest": "^23.10.4",
+    "typescript": "^3.1.3"
   }
 }
