--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -8,8 +8,8 @@
     "access": "public"
   },
   "scripts": {
-    "tsc": "rm -rf dist && tsc",
-    "watch": "tsc -w",
+    "build": "rm -rf dist && tsc",
+    "build:watch": "tsc -w",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -17,11 +17,14 @@
     "url-parse": "^1.4.3"
   },
   "peerDependencies": {
-    "react": "^16.4.2"
+    "emotion": ">=9.2.0",
+    "react": ">=16.3.0"
   },
   "devDependencies": {
-    "@types/react": "^16.4.11",
+    "@types/react": "^16.4.16",
     "@types/url-parse": "^1.4.1",
-    "typescript": "^3.0.1"
+    "emotion": "^9.2.12",
+    "react": "^16.5.2",
+    "typescript": "^3.1.3"
   }
 }
