--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -2,11 +2,11 @@
   "name": "@cc98/ubb-react",
   "version": "1.0.1",
   "description": "YAUC React version.",
+  "author": "Hydrogen <fanyangliang@gmail.com>",
   "main": "dist/index.js",
   "sideEffects": false,
-  "publishConfig": {
-    "access": "public"
-  },
+  "license": "MIT",
+  "private": true,
   "scripts": {
     "build": "rm -rf dist && tsc",
     "build:watch": "tsc -w",
