fix: netlify redirects

--- a/packages/ubb-react/package.json
+++ b/packages/ubb-react/package.json
@@ -6,7 +6,12 @@
   "main": "dist/index.js",
   "sideEffects": false,
   "license": "MIT",
-  "private": true,
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rm -rf dist && tsc",
     "build:watch": "tsc -w",
