--- a/site/package.json
+++ b/site/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/Deturium/UBB"
+    "url": "https://github.com/Deturium/YAUC"
   },
   "scripts": {
     "docz:dev": "docz dev",
@@ -12,17 +12,18 @@
     "clean": "rm -rf .docz"
   },
   "dependencies": {
-    "docz": "^0.12.5",
-    "docz-theme-default": "^0.12.5",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "styled-components": "^3.4.10",
-    "@cc98/ubb-core": "^1.0.0",
-    "@cc98/ubb-react": "^1.0.0"
+    "docz": "^1.0.4",
+    "docz-theme-default": "^1.0.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "styled-components": "^4.2.0",
+    "@cc98/ubb-core": "^1.1.0",
+    "@cc98/ubb-react": "^1.0.2"
   },
   "devDependencies": {
-    "@types/react": "^16.4.16",
-    "@types/react-dom": "^16.0.9",
-    "typescript": "^3.1.3"
+    "@types/react": "^16.8.15",
+    "@types/react-dom": "^16.8.4",
+    "@types/styled-components": "^4.1.14",
+    "typescript": "^3.4.5"
   }
 }
